Bug 421658 - Rendering fails on changing File format to "ogg video" from other formats in Video Options in Animation Render Dialog.
Summary: Rendering fails on changing File format to "ogg video" from other formats in ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.2.9
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-17 03:15 UTC by confifu
Modified: 2020-07-28 02:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description confifu 2020-05-17 03:15:21 UTC
SUMMARY
Rendering fails on changing File format to "ogg video" from other formats in Video Options in Animation Render Dialog. It succeeds on the next try. So it fails only when the last render was not in "ogg video" and the current render is in ogg format.

STEPS TO REPRODUCE
1. Render animation in any video format other than ogg.
2. Render animation in ogg format.
3. Render fails once. The next render will succeed.

OBSERVED RESULT
Rendering fails on the first try.

EXPECTED RESULT
Render succeeds on the first try.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version:
Comment 1 confifu 2020-05-19 05:20:29 UTC
This bug is there in 4.2.9. Also changing image sequence options has no effect on this bug.
Comment 2 Ahab Greybeard 2020-05-22 14:49:20 UTC
I can confirm this for the 4.2.9 and 4.3.0 beta-1 appimages.

If you Quit after the first failure and then restart, it will render ok to ogg video.

If you Quit after the first failure, then delete kritarc and restart, it will fail again.
After this stage, the Export Configuration section of kritarc has many values related to video rendering and it will then render ok to ogg video.

In the encoding log, everything seems to be going fine until part way through:
=============================================================================
Opening an output file: /home/adminahab/CONFIG/dump/Desktop/count-anim.ogv.
Codec AVOption crf (Select the quality for constant quality mode) specified for output file #0 (/home/adminahab/CONFIG/dump/Desktop/count-anim.ogv) has not been used for any stream. The most likely reason is either wrong type (e.g. a video option with no video streams) or that it is a private option of some encoder which was not actually used for any stream.
Codec AVOption preset (Configuration preset) specified for output file #0 (/home/adminahab/CONFIG/dump/Desktop/count-anim.ogv) has not been used for any stream. The most likely reason is either wrong type (e.g. a video option with no video streams) or that it is a private option of some encoder which was not actually used for any stream.
==============================================================================

and right at the end:
=============================================================================
[libtheora @ 0x57e02c0] [Eval @ 0x7ffd8b6f6f30] Undefined constant or missing '(' in 'baseline'
[libtheora @ 0x57e02c0] Unable to parse option value "baseline"
[libtheora @ 0x57e02c0] Error setting option profile to value baseline.
Error initializing output stream 0:0 -- Error while opening encoder for output stream #0:0 - maybe incorrect parameters such as bit_rate, rate, width or height
[AVIOContext @ 0x57cd280] Statistics: 0 seeks, 0 writeouts
[AVIOContext @ 0x57c7540] Statistics: 32768 bytes read, 0 seeks
Conversion failed!
=============================================================================

Also, audio is not rendered at all if an .mp3 audio track is present.
Comment 3 Eoin O'Neill 2020-07-28 01:58:32 UTC
Git commit 6ab2d9134c20692366fe2e299bf457f0115a2f38 by Eoin O'Neill.
Committed on 28/07/2020 at 01:54.
Pushed by eoinoneill into branch 'master'.

Fix Rendering Fail on First Render After Switching to video/ogg Container Type.

Quick fix to rendering changes not registering properly after changing container
formats. Comment is added for the time being since the solution is not immediately
clear.

NOTE: Rendering window still needs simplification, too much state is leading to a
fickle codebase.

M  +12   -0    libs/ui/animation/KisDlgAnimationRenderer.cpp

https://invent.kde.org/graphics/krita/commit/6ab2d9134c20692366fe2e299bf457f0115a2f38
Comment 4 Eoin O'Neill 2020-07-28 02:53:57 UTC
Git commit 361a7128d10df50092c69ba885d85604ca22e861 by Eoin O'Neill.
Committed on 28/07/2020 at 02:00.
Pushed by eoinoneill into branch 'krita/4.3'.

Fix Rendering Fail on First Render After Switching to video/ogg Container Type.

Quick fix to rendering changes not registering properly after changing container
formats. Comment is added for the time being since the solution is not immediately
clear.

NOTE: Rendering window still needs simplification, too much state is leading to a
fickle codebase.
(cherry picked from commit 6ab2d9134c20692366fe2e299bf457f0115a2f38)

M  +12   -0    libs/ui/animation/KisDlgAnimationRenderer.cpp

https://invent.kde.org/graphics/krita/commit/361a7128d10df50092c69ba885d85604ca22e861