Fix Rendering Fail on First Render After Switching to video/ogg Container Type.

Quick fix to rendering changes not registering properly after changing container
formats. Comment is added for the time being since the solution is not immediately
clear.

NOTE: Rendering window still needs simplification, too much state is leading to a
fickle codebase.

BUG:421658
(cherry picked from commit 6ab2d9134c20692366fe2e299bf457f0115a2f38)